<resources>
    <string name="app_name">QuLeGame</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logic">请登入</string>
    <string name="welcome">欢迎来到趣乐游戏！</string>
    <string name="message_center">消息中心</string>
    <string name="my_order">我的订单</string>
    <string name="favorites">收藏夹</string>
    <string name="check_more">查看更多</string>

    <string name="download_begin">开始下载\n
                                1. 这个属于OkServer依赖中的功能,并不属于OkGo\n
                                2. 支持断点下载和状态管理\n
                                3. 支持自定义下载任务优先级\n
                                4. 支持链试调用\n
                                5. 最多支持扩展3个额外数据\n
                                6. 支持同时指定多个下载目录</string>
    <string name="download_center">所有任务\n
                                1. 每个任务支持暂停，继续，重新下载，删除等操作\n
                                2. 支持全部暂停，全部开始，全部删除\n
                                3. 支持全局下载任务监听\n
                                4. 支持一个任务多个监听\n
                                5. 支持按下载中列表和下载完成列表筛选
    </string>

</resources>
