<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gzql.mlqy.qule.fragment.PersonalFragment"
    android:orientation="vertical"
    android:background="#ffffff"
    >

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
       <ImageView

           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@drawable/headbase"
           />
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/head_portrait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/head_portrait"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            />
 <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_toRightOf="@+id/head_portrait"
     android:layout_centerVertical="true"
     >
        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/logic"
            android:textColor="#ffffff"
            android:drawableRight="@drawable/pen"


            android:layout_marginBottom="3dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="#ffffff"
            android:layout_toRightOf="@+id/head_portrait"
            />
 </LinearLayout>
        <ImageView
            android:id="@+id/sign_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/sign_in"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            />
 </RelativeLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:padding="10dp"
      >
     <TextView
         android:id="@+id/message_text"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:text="@string/message_center"
         android:drawableTop="@drawable/message_center"
         android:gravity="center"
         />
      <View
          android:layout_width="0.5dp"
          android:layout_height="50dp"
          android:background="@color/gray"

          />
      <TextView
          android:id="@+id/order_text"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:layout_height="wrap_content"
          android:text="@string/my_order"
          android:drawableTop="@drawable/my_order"
          android:gravity="center"
          />
      <View
          android:layout_width="0.5dp"
          android:layout_height="50dp"
          android:background="@color/gray"
          />
      <TextView
          android:id="@+id/favorites_text"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:layout_height="wrap_content"
          android:text="@string/favorites"
          android:drawableTop="@drawable/favorites"
          android:gravity="center"
          />
  </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:background="@color/gray"
        />
    <LinearLayout
        android:id="@+id/share_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="10dp"
        >
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="分享趣乐游戏"
        android:drawableLeft="@drawable/share"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        />
  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/grey_arrow"
      />

    </LinearLayout>
    <View
        android:id="@+id/line_view1"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:background="@color/gray"
        android:visibility="gone"
        />
    <LinearLayout
        android:id="@+id/ticket_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="玩票"
            android:drawableLeft="@drawable/ticket"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/grey_arrow"
            />

    </LinearLayout>
    <View
        android:id="@+id/line_view2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray"
        android:visibility="gone"
        />
    <LinearLayout
        android:id="@+id/task_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="任务"
            android:drawableLeft="@drawable/task"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/grey_arrow"
            />

    </LinearLayout>
    <View
        android:id="@+id/line_view3"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:background="@color/gray"
        android:visibility="gone"
        />
    <LinearLayout
        android:id="@+id/safety_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="帐号与安全"
            android:drawableLeft="@drawable/safety"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/grey_arrow"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray"
        />
    <LinearLayout
        android:id="@+id/help_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="10dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="帮助中心"
            android:drawableLeft="@drawable/help"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/grey_arrow"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/gray"
        />


</LinearLayout>
